react-portfolio/src/App.css
/* 
Material Dark Theme
https://m2.material.io/design/color/dark-theme.html#ui-application

Primary:          #BB86FC
PrimaryVariant:   #3700B3
Secondary:        #03DAC6
Background:       #121212
Surface:          #121212
Error:            #CF6679
On Primary:       #000000
On Secondary:     #000000
On Background:    #000000
On Surface:       #FFFFFF
On Error:         #FFFFFF

*/

/* 
Define color variables
*/
:root {
  /* Primary colors */
  --color-primary: #BB86FC;
  --color-primary-variant: #3700B3;

  /* Secondary colors */
  --color-secondary: #03DAC6;

  /* Background colors */
  --color-background: #121212;
  --color-surface: #141414;
  /* #141414. is 10% lighter than #121212 */
  /* Error color */
  --color-error: #CF6679;

  /* Text colors */
  --color-on-primary: #000000;
  --color-on-secondary: #000000;
  --color-on-background: #000000;
  --color-on-surface: #FFFFFF;
  --color-on-error: #FFFFFF;
}

.App {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 3s ease-in-out;
  }
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

body {
  font-family: 'Ubuntu', sans-serif !important;
  font-size: 17px;
  padding: 20px;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background-color: var(--color-background) !important;
  min-width: 200px
}

/* prevent horizontal scrollingF */
body,
html {
  overflow-x: hidden;
}

*,
*:before,
*:after {
  box-sizing: border-box;
}

.container {
  width: 100%;
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0;
  margin: 0;
}

.navbar {
  margin-top: 15px !important;
  padding-left: 30px !important;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999;
  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2); */
  transition: top .3s;
}

.hide {
  top: -40px
}

.nav-link {
  color: var(--color-on-surface) !important;
  padding-left: 30px !important;
  font-size: 18px !important;
}

.nav-link:hover {
  color: var(--color-primary) !important;
}

.navbar-nav {
  padding-right: 30px !important;
}

.navbar-toggler {
  /* color: var(--color-secondary) !important; */
  border-color: transparent !important;
  padding-right: 30px !important;
}

.navbar-toggler:hover {
  filter: brightness(0.7) !important;
}

.navbar-toggler:focus {
  outline: none !important;
  border-color: transparent !important;
  box-shadow: none !important;
}

/* manually (rgba) change color of navbar toggler icon */
.navbar-light .navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(187, 134, 252, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
  background-size: 50px 50px;
}

nav {
  width: 100% !important;
}

svg {
  width: 100%;
  height: 100%;
  display: block;
  margin: 0 auto;
  fill: none;
}

.svg-container {
  position: relative;
}

.svg-container:hover {
  filter: brightness(0.7);
}

.logo-text {
  position: absolute;
  top: 60%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: var(--color-primary);
  font-size: 40px;
  font-weight: 400;
}

.section {
  position: relative;
  /* flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  display: flex;
  flex: 1; */
  left: calc(20% - 100px);
  color: var(--color-primary);
}

.section p {
  font-size: 20px;
}

.section h1 {
  color: var(--color-on-surface);
  font-size: 60px;
}

.section h2 {
  color: var(--color-on-surface);
  filter: brightness(0.65);
  font-size: 50px;
}

.main-container {
  position: absolute;
  top: 250px;
  padding-right: 30px;
  /* or any other value that suits your needs */
}

@media only screen and (max-width: 749px) {
  .line1 {
    visibility: hidden;
  }

  .line1-text {
    visibility: hidden;
  }

  .main-container {
    max-width: calc(90%);
  }
}


@media only screen and (min-width:750px) and (max-width: 999px) {
  .line1 {
    visibility: hidden;
  }

  .line1-text {
    position: fixed;
    top: 230px;
    left: 45px;
    font-size: 16px;
    color: var(--color-on-surface);
    display: flex;
    flex-direction: column;
    width: 45px;
    height: 45px;
    padding: 5px;
  }

  .line1-text a {
    height: 70px;
  }

  .main-container {
    max-width: calc(90% - 20px);
    left: calc(15%);
  }
}

@media only screen and (min-width: 1000px) {
  .line1 {
    position: fixed;
    top: 245px;
    left: 0px;
    height: 1px;
    width: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    background-color: var(--color-on-surface);
  }

  .line1-text {
    position: fixed;
    top: 230px;
    left: 75px;
    font-size: 16px;
    color: var(--color-on-surface);
    display: flex;
    width: 150px;
    height: 45px;
    padding: 5px;
  }

  .main-container {
    max-width: calc(90% - 150px);
    left: calc(18%);
  }
}

a {
  position: relative;
  bottom: 0;
  transition: bottom 0.3s ease-in-out;
}

/* stops the nav-links*/
a:not(.navbar *):hover {
  stroke: var(--color-primary);
  bottom: 10px;
}

/* stops the nav-brand*/
a:not(.navbar *):hover svg path {
  stroke: var(--color-primary);
}

/* polyline and rect are for the svgs */
a:hover polyline {
  stroke: var(--color-primary);
}

a:hover rect {
  stroke: var(--color-primary);
}

